--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 
 <head>
 
-    <title>Harmful Gas live data</title>
+    <title>Temperature&Humidity Real-time Data</title>
 
     <script src="javascripts/jquery-2.1.4.min.js" type="text/javascript" charset="utf-8"></script>
     <script src="javascripts/Chart.min.js" type="text/javascript" charset="utf-8"></script>
